# projeto-acoes

./: .gitignore  pyproject.toml
src/projeto_acoes/: pegar_relatorios.py
tests/: test_pegar_relatorios.py
